# stc

./: CMakeLists.txt  Makefile  PKGBUILD  README.md  ids.txt  line-count  shell.nix
assets/: ids.txt  sources.html
src/: Regex.cpp  getHttp.cpp  main.cpp  maincommand.cpp  regex.cpp
src/includes/: Regex.hpp  Strings.hpp  getHttp.h  getHttp.hpp  maincommand.hpp  regex.hpp
